2009-05-29 Pierre Wieser <pwieser@trychlos.org>

	Move all sources directories under src/
	Remove one directory level when installing Glade file

	* configure.ac:
	* Makefile.am:
	Updated accordingly.
	Build and install po/ directory after sources.

	* src/nact/Makefile.am:
	Remove one directory level when installing Glade file.

2009-05-29 Pierre Wieser <pwieser@trychlos.org>

	Include a short application description in all source headers

	* plugin/nautilus-module.c:
	Renamed from plugin/nautilus-actions-module.c.

	* plugin/nautilus-actions.c:
	Move log handler to nautilus-module.c.

	* plugin/Makefile.am:
	Updated accordingly.

2009-05-29 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	Bump version number to 1.11 unstable.

2009-05-29 Pierre Wieser <pwieser@trychlos.org>

	Prepare for the 1.10.1 release

2009-05-28 Pierre Wieser <pwieser@trychlos.org>

	* plugin/nautilus-actions.c (nautilus_actions_get_file_items):
	Fix iteration through profiles list.
	Do not search through actions when the Nautilus-provided list is empty.

	* plugin/nautilus-actions.c (get_hash_keys):
	Remove no more used function.

	* nact/nautilus-actions-config.glade:
	Remove (useless) 'field_changed_cb' handler from the menu icon.

	* nact/nact-editor.c:
	* nact/nact-action-editor.c:
	Restore tooltip display for the icon name depending on Gtk+ version.

	* nact/nact.c:
	* nact/nautilus-actions-config.glade:
	Double-click on an action opens the editor.

	* nact/nact-profile-editor.c:
	Enable the OK button as soon as required fields are filled.

	* m4/nact-maintainer-mode.m4:
	* plugin/nautilus-actions.c:
	Only enable syslog'ed debug messages when in maintainer mode.

	* libnautilus-actions/Makefile.am:
	Remove trailing whitespace.

2009-05-25 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	* Makefile.am:
	Reorganize install order so that plugin be installed last.

	* icons/Makefile.am:
	* libnautilus-actions/Makefile.am:
	* nact/Makefile.am:
	* plugin/Makefile.am: