@@ -44,14 +44,14 @@ nautilus_actions_new_config_SOURCES = \
 	$(NULL)
 
 nautilus_actions_new_config_LDADD = \
-	$(top_builddir)/src/libnautilus-actions/libnautilus-actions.la	\
-	$(NAUTILUS_ACTIONS_UTILS_LIBS)									\
+	$(top_builddir)/src/common/libnact.la		\
+	$(NAUTILUS_ACTIONS_UTILS_LIBS)				\
 	$(NULL)
 
 nautilus_actions_check_actions_change_SOURCES = \
 	nautilus-actions-check-actions-change.c
 
 nautilus_actions_check_actions_change_LDADD = \
-	$(top_builddir)/src/libnautilus-actions/libnautilus-actions.la	\
-	$(NAUTILUS_ACTIONS_LIBS)										\
+	$(top_builddir)/src/common/libnact.la		\
+	$(NAUTILUS_ACTIONS_LIBS)					\
 	$(NULL)
