@@ -2,11 +2,13 @@
 
 	Move all sources directories under src/
 	Remove one directory level when installing Glade file
+	Rename libnautilus-actions/libnautilus-actions to common/libnact
 
 	* configure.ac:
 	* Makefile.am:
-	Updated accordingly.
 	Build and install po/ directory after sources.
+
+	* All sources: Updated accordingly.
 
 	* src/nact/Makefile.am:
 	Remove one directory level when installing Glade file.
